# functional-programming-toolkit

./: .gitignore  README.md  functional-programming-toolkit.cabal
.github/workflows/: ci.yml
app/: Main.hs  TetrisMain.hs
bench/: Main.hs
docs/: AUDIT.md  CONCEPT_MAP.md
src/Functional/: Algebra.hs  Blackjack.hs  Sudoku.hs  Tetris.hs
src/Functional/Games/: Blackjack.hs  Tetris.hs
src/Functional/Puzzles/: Sudoku.hs  SudokuCatalogue.hs
src/Functional/Sudoku/: Catalogue.hs
src/Functional/Symbolic/: Algebra.hs
test/: Main.hs
